# termviz

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
benches/: README.md
docs/: INDEX.md  architecture.md  releasing.md  testing.md  visual-verification.md
examples/: error-spikes-demo.csv  latency-demo.csv  sample.csv  scatter-outliers-demo.csv  throughput-demo.csv
npm/termviz/: README.md  package.json
scripts/: bench-ansi-export.sh  bench-interactive-pty.sh  bench-metadata-inspect.sh  bench-plot-e2e.sh  bench-plot-export.sh  bench-plot-recompute.sh  bench-render-pipeline.sh  record-emulator-demo.sh  record-emulator-fixtures.sh  record-pty-demo.sh  release-verify.sh  smoke-pty.sh
skills/termviz/: SKILL.md
src/: asset.rs  cli.rs  export.rs  input.rs  lib.rs  main.rs  plot.rs  profile.rs  render.rs  tui.rs  viewer.rs
src/asset/: raster.rs  svg.rs
src/input/: sniff.rs
src/plot/: histogram.rs  model.rs  stream.rs  table.rs
src/render/: terminal.rs
src/render/protocols/: blocks.rs  iterm.rs  kitty.rs  mod.rs  plot.rs  sixel.rs
src/render/protocols/blocks/: mod.rs  raster.rs
src/render/protocols/blocks/plot/: ascii.rs  braille.rs  mod.rs
src/render/protocols/plot/: display_list.rs  layout.rs  mod.rs  raster.rs  svg.rs  text.rs  theme.rs
src/tui/: chrome.rs  layout.rs  palette.rs  plot_frame.rs
src/viewer/: image.rs  plot.rs
src/viewer/plot/: atlas.rs  cache.rs  chrome.rs  events.rs  hover.rs  mod.rs  state.rs  tests.rs
tests/: cli.rs
