[package]
name = "termviz"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Terminal-first viewer for images and plots"
license = "MIT"
repository = "https://github.com/siriusctrl/termviz"
readme = "README.md"
keywords = ["terminal", "image", "plot", "viewer", "cli"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
ab_glyph = "0.2.32"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
base64 = "0.22.1"
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
tempfile = "3.27.0"
serde_json = "1.0.140"
unicode-width = "0.2.2"

[dev-dependencies]
assert_cmd = "2.2.1"
predicates = "3.1.4"
